--- a/OMI/Views/Solicitud/AllSolicitud.cshtml
+++ b/OMI/Views/Solicitud/AllSolicitud.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<OMI.TbSolicitud>
+﻿@using Omu.Awem.Helpers
+@model IEnumerable<OMI.TbSolicitud>
 
 @{
     ViewBag.Title = "AllSolicitud";
@@ -20,6 +21,7 @@
                     <a class="btn btn-success" id="NuevoPersonal" href="@Url.Action("Index","Personal" ,new { id=-1})">Solicitud de Personal</a>
 
                 </p>
+             
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
                     <thead>   <tr>
                         <th>
@@ -37,12 +39,11 @@
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.Enviado)
-                        </th>
+                        </th> 
                         <th>
-                            Autorizar
+                            Opciones
                         </th>
 
-                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -51,11 +52,11 @@
                     {
         
 
-                        <tr>
+                        <tr id="@item.IdSolicitud">
                             <td>
                                 @Html.DisplayFor(modelItem => item.Folio)
                             </td>
-                            <td>
+                            <td >
                                 @Html.DisplayFor(modelItem => item.Fecha)
                             </td>
                             <td>
@@ -65,19 +66,18 @@
                                 @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Enviado)
+                                <div id="@item.IdSolicitud">
+                                    @Html.DisplayFor(modelItem => item.Enviado)
+                                </div>
                             </td>
-                            <td>
-                                <button type="button" class="awe-btn" onclick="awe.open('createdDinner')">Create</button>          
-                            </td>
+                            
                             <td>
                    
                                 @Html.ActionLink("Details", "Details", new {id = item.IdSolicitud, idfor = item.IdFormato })
                                 <span> &#124; </span>
                                 @Html.ActionLink("Delete", "DeleteM", new {id = item.IdSolicitud, idfor = item.IdFormato })
+                              
                     
-
-                            </td>
                         </tr>
          
                     }
@@ -88,53 +88,12 @@
         </div>
     </div>
 </div>
-   
-
-@(Html.Awe().InitPopupForm()
-      .Name("editDinner")
-      .Height(400)
-      .Url(Url.Action("Autorizar", "Solicitud"))
-      .Success("created"))
 
 
 
 
 @section Scripts
 {
-    <script type="text/javascript">
-
-        function created(result, popup) {
-            alert('dinner created');
-        }
-    </script>
-    
-    <script type="text/javascript">
-     $(function() {
-         $('.editModal').modal();
-     });
-
-     function editProduct(productId) {
-         $.ajax({
-             url: '/Product/GetProductDetailsModal/' + productId, // The method name + paramater
-             success: function(data) {
-                 $('#modalWrapper').html(data); // This should be an empty div where you can inject your new html (the partial view)
-             }
-         });
-     }
-
-
-
-
-     $("#btnCancelar").click(function () {
-
-         var form = $(this).parent("form");
-
-         form.attr('action', '<%= Url.RouteUrl(new { Controller = "Solicitud", Action = "Cancelar" }) %>');
-
-         form.attr('method', 'get');
-
-     });
-</script>
     <script type="text/javascript">
         $(document).ready(function() {
 
@@ -152,6 +111,6 @@
                 }
             });
         });
-</script>
+    </script>
 
 }
